Version 0.10.4
==============

Released ????? ??, ????

- Support for Djibouti (Abdisamade)
- Korea 2020 fix (MYUNGJE, dr-p)


Version 0.10.3
==============

Released July 15, 2020

- Added get_named(substring) method to retrieve holidays by name (dr-p)
- Added pop_named(substring) method to pop specific holiday/s by name (samtregar, dr-p)
- Support for Burundi (bmwachajr)
- Support for Latvia (rolandinsh)
- Support for Romania (dorianm)
- Spain fix (dr-p)
- Netherlands fix (RooieRakkert)
- Switzerland fixes (cgrigis)
- Germany fix (MikeTsenatek)
- Added korean_cal attribute to Korea and Vietnam (seriousran, pelennor)
- United States fixes (patrick-nicholson, dr-p)
- Singapore fixes + 2021 holidays (mborsetti)


Version 0.10.2
==============

Released April 13, 2020

- Support for Spain (piliamaurizio, jbroudou, dr-p, gerardo15)
- Support for Turkey (cemkaragozlu)
- Support for Korea (1kko, dr-p)
- Support for Vietnam (1kko, dr-p)
- Support for Morocco (abensrhir, dr-p)
- Mexico fix (Rosi2143, dr-p)
- Croatia fix (sebojanko, dr-p)
- US Georgia fix (jbroudou, dr-p)
- Austria province ISO3166-2 adoption (jbroudou, dr-p)
- Portugal typos & name fixes (reinaldoramosarxi)
- US MLK renamed (snoopyjc, dr-p)
- ISO-3 codes export fix (dr-p)

Version 0.10.1
==============

Released January 25, 2020

- Project structure refactoring (MaxHaertwig, dr-p)
- Added support for Python3.8 (dr-p)
- Dropped support for pypy and Python3.4, welcome back pypy3 (dr-p)
- Fully reviewed Travis CI integration (dr-p)
- Added 3-digit country ISO codes (MaxHaertwig)
- Support for Paraguay (dr-p, sfeliu)
- Support for Israel (giladmaya, dr-p)
- Support for Egypt (gaberm)
- Support for Serbia (kosugor)
- Support for Singapore (mborsetti)
- README.rst fixes / sync
- Brazil-Parana support (dr-p, jbroudou)
- Japan fixes (dr-p, thophan92, saurabh3896)
- Canada, Spain, US fixes (jbroudou)
- Belarus fix (mpolyakovsky)


Version 0.9.12
==============

Released December 23, 2019
