@@ -4,6 +4,7 @@ Version 0.10.4
 Released ????? ??, ????
 
 - Support for Djibouti (Abdisamade)
+- Support for United Arab Emirates (marcomasulli, mborsetti)
 - Korea 2020 fix (MYUNGJE, dr-p)
 
 
